eks-cluster/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app-deployment
  labels:
    app: web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
        - name: web-app-container
          image: 170257681718.dkr.ecr.ap-southeast-1.amazonaws.com/node-image:$BUILD  # Replace with your image
          ports:
            - containerPort: 8081
