eks-cluster/k8s/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: web-app-service
  namespace: default  # Change this to your desired namespace
spec:
  selector:
    app: web-app  # Must match the labels of the Pods you want to expose
  ports:
    - protocol: TCP
      port: 8081        # The port that the service will expose
      targetPort: 8081 # The port on the Pod that the service should forward traffic to
  type: NodePort    # Exposes the service within the cluster (default)
